# osgstudy

./: CMakeLists.txt
source/draw_rectangle/: CMakeLists.txt  draw_rectangle.cpp
source/intersection_test/: CMakeLists.txt  intersection_test.cpp
source/osgterrain/: CMakeLists.txt  draw_line.cpp  draw_line.hpp  event_capture.cpp  event_capture.hpp  main.cpp  osgterrain.cpp  osgterrain.hpp
source/overlaynode/: CMakeLists.txt  draw_line.cpp  draw_line.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  overlaynode.cpp  widget.ui
source/qopenglwidget/: CMakeLists.txt
source/qopenglwidget/include/: graphicswindowqt.hpp  mainwindow.hpp  qopenglwidget.hpp  viewer_widget.hpp
source/qopenglwidget/resource/: qopenglwidget.qrc
source/qopenglwidget/sources/: graphicswindowqt.cpp  main.cpp  mainwindow.cpp  qopenglwidget.cpp  viewer_widget.cpp
source/rename/: CMakeLists.txt  rename.cpp
source/switching_nodes/: CMakeLists.txt  Oyanirami0.3ds  switching_nodes.cpp
source/thumbatck/: CMakeLists.txt  thumbatck.cpp
test_data/: cube.osgb  dem.tif
